JAVA/hello_world/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;E:\My Codes\JAVA\hello_world
-d
E:\My Codes\JAVA\hello_world\doc
-encoding
UTF-8
-charset
UTF-8
E:\My Codes\JAVA\hello_world\Hello_World.java
<---- end of javadoc command ---->
Loading source file E:\My Codes\JAVA\hello_world\Hello_World.java...
E:\My Codes\JAVA\hello_world\Hello_World.java:4: error: <identifier> expected
  System.out.println("hello world");
                    ^
E:\My Codes\JAVA\hello_world\Hello_World.java:4: error: illegal start of type
  System.out.println("hello world");
                     ^
2 errors
